--- a/_1.Presentation/Views/_Partials/ProjectListPartials/_EditProjectModal.cshtml
+++ b/_1.Presentation/Views/_Partials/ProjectListPartials/_EditProjectModal.cshtml
@@ -6,16 +6,21 @@
         <header class="form-header">
             <h1 class="form-title">Edit Project</h1>
             <div class="close-icon-wrapper">
-                <img src="/Pictures/Icons/close.svg" alt="Close" class="close-icon" />
+                <img src="https://cdn.builder.io/api/v1/image/assets/2a274513ffcd4318aca721aa009fe223/fbad265fe11d048cf327a34d15de60a4a8ffd228?placeholderIfAbsent=true"
+                     alt="Close"
+                     class="close-icon" />
             </div>
         </header>
 
-        <form asp-action="Edit" asp-controller="Projects" method="post" enctype="multipart/form-data" class="project-form">
+        <form asp-action="Edit" asp-controller="Projects" method="post" enctype="multipart/form-data" class="project-form" style="box-shadow: none;">
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="ImageUrl" id="editImageUrlHidden" />
+            <!-- 🟢 Behåller befintlig bild om ingen ny laddas upp -->
 
             <section class="image-upload-section">
                 <label class="upload-border" for="editProjectImageInput">
-                    <img src="@Url.Content(Model.ImageUrl ?? "~/Pictures/Icons/projectlogo.svg")" alt="Upload" class="upload-icon" id="editUploadPreview" />
+                    <img src="@Url.Content(Model.ImageUrl ?? "~/Pictures/Icons/projectlogo.svg")"
+                         alt="Upload" class="upload-icon" id="editUploadPreview" />
                     <span class="upload-text">Click to upload icon</span>
                 </label>
                 <input type="file" id="editProjectImageInput" name="ImageFile" accept="image/*" hidden />
@@ -33,7 +38,10 @@
 
             <div class="form-group">
                 <label class="form-label">Description</label>
-                <textarea asp-for="Description" class="form-input" rows="5" placeholder="HTML Description"></textarea>
+                <div id="edit-editor-container">
+                    <p><br /></p>
+                </div>
+                <input type="hidden" name="Description" id="edit-hidden-description" />
             </div>
 
             <div class="date-container">
@@ -50,16 +58,53 @@
 
             <div class="form-group">
                 <label class="form-label">Members</label>
-                @foreach (var id in Model.MemberIds)
-                {
-                    <input type="hidden" name="MemberIds" value="@id" />
-                }
-                <div class="members-tags">
-                    @* Dynamiskt renderade tags via JS om du vill *@
+                <div class="members-input">
+                    <div class="members-tags" id="editMembersTagsContainer"></div>
+                    <input type="text" id="editMemberInput" class="member-input" placeholder="Add member..." />
+                    <ul id="editSuggestionsList" class="suggestions-list"></ul>
                 </div>
             </div>
+
+            <div id="editMemberHiddenFieldsContainer"></div>
 
             <button type="submit" class="submit-button">Save changes</button>
         </form>
     </div>
 </div>
+
+<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+<script>
+    const editQuill = new Quill("#edit-editor-container", {
+        theme: "snow",
+        placeholder: "Type something...",
+        modules: {
+            toolbar: [
+                [{ header: [1, 2, false] }],
+                ["bold", "italic", "underline"],
+                ["blockquote", "code-block"],
+                [{ list: "ordered" }, { list: "bullet" }],
+                ["clean"],
+            ],
+        },
+    });
+
+    let editSavedRange = null;
+    editQuill.on("selection-change", function (range) {
+        if (range) editSavedRange = range;
+    });
+
+    document.querySelector("#edit-editor-container .ql-toolbar")?.addEventListener("mousedown", function () {
+        if (editSavedRange) {
+            setTimeout(() => {
+                editQuill.setSelection(editSavedRange.index, editSavedRange.length);
+            }, 0);
+        }
+    });
+
+    editQuill.on("text-change", function () {
+        document.getElementById("edit-hidden-description").value = editQuill.root.innerHTML;
+    });
+
+   
+
+</script>
